package com.example.myapplication.views.room_list;

public interface RoomCardType {
    int Public_Room_Card = 1;
    int Private_Room_Card = 2;

    int getListItemType();
}
