@startuml
class com.example.myapplication.views.room_list.PublicRoomCardViewHolder {
+ NetworkImageView roomImage
+ TextView roomTitle
+ TextView speaker_name
+ TextView roomStatus
- ImageRequester imageRequester
+ TextView roomId
+ void bindType(RoomCardType)
}
class com.example.myapplication.views.room_list.RoomCardRecyclerViewAdapter {
- Context context
- List<RoomEntry> roomList
+ int getItemViewType(int)
+ RecyclerView.ViewHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(RecyclerView.ViewHolder,int)
+ void setRoomList(List<RoomEntry>)
+ int getItemCount()
}
class com.example.myapplication.views.room_list.PrivateRoomCardViewHolder {
+ NetworkImageView roomImage
+ TextView roomTitle
+ TextView speaker_name
+ TextView roomStatus
- ImageRequester imageRequester
+ TextView roomId
- EditText input_password
# ProgressDialog progressDialog
+ {static} MediaType JSON
+ void bindType(RoomCardType)
- void callJoinMeeting(Context)
+ void promptPasswordInput(Context)
}
class com.example.myapplication.views.room_list.RoomGridItemDecoration {
- int largePadding
- int smallPadding
+ void getItemOffsets(Rect,View,RecyclerView,RecyclerView.State)
}
class com.example.myapplication.views.room_list.RoomGridFragment {
~ ExtendedFloatingActionButton fab
~ StartRoomFragment startroom_frag
~ SwipeRefreshLayout my_swipe_refresh
~ List<RoomEntry> roomlist
~ RoomCardRecyclerViewAdapter adapter
~ RecyclerView recyclerView
+ void onCreate(Bundle)
+ View onCreateView(LayoutInflater,ViewGroup,Bundle)
- void setUpToolbar(View)
+ void onCreateOptionsMenu(Menu,MenuInflater)
+ void onDestinationChanged(NavController,NavDestination,Bundle)
+ void initFab(View)
+ void init_SwipeRefreshLayout(View)
+ void initRoomEntryList_OnServer()
}
interface com.example.myapplication.views.room_list.RoomCardType {
~ int Public_Room_Card
~ int Private_Room_Card
~ int getListItemType()
}


com.example.myapplication.views.room_list.ViewHolder <|-- com.example.myapplication.views.room_list.PublicRoomCardViewHolder
com.example.myapplication.views.room_list.Adapter <|-- com.example.myapplication.views.room_list.RoomCardRecyclerViewAdapter
com.example.myapplication.views.room_list.ViewHolder <|-- com.example.myapplication.views.room_list.PrivateRoomCardViewHolder
com.example.myapplication.views.room_list.ItemDecoration <|-- com.example.myapplication.views.room_list.RoomGridItemDecoration
com.example.myapplication.views.room_list.OnDestinationChangedListener <|.. com.example.myapplication.views.room_list.RoomGridFragment
androidx.fragment.app.Fragment <|-- com.example.myapplication.views.room_list.RoomGridFragment
@enduml